--- a/index.html
+++ b/index.html
@@ -25,17 +25,168 @@
     <!-- main section starts -->
     <main>
         <div class="main-section">
-            <div class="side-bar">
-                <a href="">Upcoming Match</a>
-                <a href="">All Group</a>
-                <a href="">Blog</a>
+            <div class="side-bar item-1">
+                <a class="link-1" href="">Upcoming Match</a>
+                <a class="link-2" href="">All Group</a>
+                <a id="link-3" href="">Blog</a>
             </div>
-            <div class="display-player">
-
+            <div class="display-player item-2">
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="player">
+                    <img src="./images/Blog Image.png" alt="">
+                    <p><button class="btn">Transfer</button></p>
+                    <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="icons">
+                        <div class="icon-clock">
+                            <img src="./images/Time Icon.png" alt="">
+                            <small>10h</small>
+                        </div>
+                        <div class="icon-sms">
+                            <img src="images/Chat Icon.png" alt="">
+                            <small>23</small>
+                        </div>
+                    </div>
+                 </div>
             </div>
         </div>
         
     </main>
+
+    <!-- footers section starts -->
+    <footer>
+        <div class="foot">
+            <h1 id="goal">Goal</h1>
+            <hr>
+        </div>
+            <div class="items">
+                <p>Contact Us</p>
+                <p>Terms of Service</p>
+                <p>Privacy Policy</p>
+                <p>Privacy Settings</p>
+                <p>Goal App</p>
+                <p>Goal Live</p>
+            </div>
+       
+    </footer>
 
 </body>
 </html>
