--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <div class="main-section">
-            <div class="side-bar item-1">
+            <div style="margin-bottom: 800px ;" class="side-bar item-1">
                 <a class="link-1" href="match.html">Upcoming Match</a>
                 <a class="link-2" href="index.html">All Group</a>
-                <a id="link-3" href="">Blog</a>
+                <a style="background-color: rgba(221, 0, 0, 1);color: white;" id="link-3" href="">Blog</a>
             </div>
             <div class="display-player item-2">
                 <div class="player">
