--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
+    <!-- fonts awesome -->
+    <script src="https://kit.fontawesome.com/1509556062.js" crossorigin="anonymous"></script>
     <!-- styles sheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -25,9 +27,9 @@
     <!-- main section starts -->
     <main>
         <div class="main-section">
-            <div class="side-bar item-1">
+            <div style="margin-bottom: 800px;" class="side-bar item-1">
                 <a class="link-1" href="match.html">Upcoming Match</a>
-                <a class="link-2" href="">All Group</a>
+                <a style="background-color: rgba(221, 0, 0, 1);color: white;" class="link-2" href="">All Group</a>
                 <a id="link-3" href="blog.html">Blog</a>
             </div>
             <div class="display-player item-2">
@@ -177,14 +179,19 @@
             <h1 id="goal">Goal</h1>
             <hr>
         </div>
-            <div class="items">
+         <div class="items">
                 <p>Contact Us</p>
                 <p>Terms of Service</p>
                 <p>Privacy Policy</p>
                 <p>Privacy Settings</p>
                 <p>Goal App</p>
                 <p>Goal Live</p>
-            </div>
+         </div>
+         <div class="social-icon">
+            <a href="https://www.facebook.com/hasanulbar" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/hasanul_bari/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="https://www.linkedin.com/in/hasanul-bari-7382051a2/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+         </div>
        
     </footer>
 
