--- a/match.html
+++ b/match.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Cup</title>
+    <title>Upcomming Match</title>
+    <!-- fonts awesome -->
+    <script src="https://kit.fontawesome.com/1509556062.js" crossorigin="anonymous"></script>
     <!-- styles sheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -28,9 +30,9 @@
     <!-- main section starts -->
     <main>
         <div class="main-section">
-            <div class="side-bar item-1">
-                <a class="link-1" href="match.html">Upcoming Match</a>
-                <a class="link-2" href="">All Group</a>
+            <div style="margin-bottom: 100px;" class="side-bar item-1">
+                <a style="background-color: rgba(221, 0, 0, 1);color: white;" class="link-1" href="match.html">Upcoming Match</a>
+                <a class="link-2" href="index.html">All Group</a>
                 <a id="link-3" href="blog.html">Blog</a>
             </div>
             <div class="display-player item-2">
@@ -131,7 +133,11 @@
             <p>Goal App</p>
             <p>Goal Live</p>
         </div>
-
+        <div class="social-icon">
+            <a href="https://www.facebook.com/hasanulbar" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/hasanul_bari/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="https://www.linkedin.com/in/hasanul-bari-7382051a2/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
     </footer>
 
 </body>
