--- a/match.html
+++ b/match.html
@@ -19,7 +19,7 @@
             <h1 class="header-title">The Greatest show on the earth</h1>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old</p>
-            <a href="">Watch Live ></a>
+            <a id="watch-live" href="">Watch Live ></a>
         </div>
         <div class="header-img">
             <img src="images/Banner Image.png" alt="">
@@ -118,6 +118,12 @@
         </div>
 
     </main>
+    <!-- main section endss -->
+    <section>
+        <div class="view-all">
+            <button>View All</button>
+        </div>
+    </section>
 
     <!-- footers section starts -->
     <footer>
